--- a/src/style.css
+++ b/src/style.css
@@ -989,6 +989,10 @@ video {
   margin-top: 0.15rem;
 }
 
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
 .box-border {
   box-sizing: border-box;
 }
@@ -1228,6 +1232,14 @@ video {
 
 .h-\[60px\] {
   height: 60px;
+}
+
+.h-48 {
+  height: 12rem;
+}
+
+.h-52 {
+  height: 13rem;
 }
 
 .max-h-56 {
@@ -1759,6 +1771,18 @@ video {
   justify-content: space-evenly;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1848,6 +1872,10 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
 }
 
 .rounded-b-lg {
@@ -2267,6 +2295,10 @@ video {
 
 .p-\[auto\] {
   padding: auto;
+}
+
+.p-7 {
+  padding: 1.75rem;
 }
 
 .\!py-0 {
@@ -2904,6 +2936,18 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-beeYellow\/10 {
   --tw-shadow-color: rgb(243 216 44 / 0.1);
   --tw-shadow: var(--tw-shadow-colored);
@@ -2916,6 +2960,16 @@ video {
 
 .shadow-customDark {
   --tw-shadow-color: #212529;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-laundryPurple {
+  --tw-shadow-color: #5327A8;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-laundryLightPurple {
+  --tw-shadow-color: #BB8CE8;
   --tw-shadow: var(--tw-shadow-colored);
 }
 
@@ -3039,6 +3093,10 @@ video {
 
 .duration-\[600ms\] {
   transition-duration: 600ms;
+}
+
+.duration-700 {
+  transition-duration: 700ms;
 }
 
 .ease-\[cubic-bezier\(0\2c 0\2c 0\.15\2c 1\)\2c _cubic-bezier\(0\2c 0\2c 0\.15\2c 1\)\] {
@@ -3303,6 +3361,18 @@ video {
 
 .empty\:hidden:empty {
   display: none;
+}
+
+.hover\:scale-105:hover {
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-110:hover {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:cursor-pointer:hover {
@@ -4364,6 +4434,10 @@ video {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .md\:p-5 {
     padding: 1.25rem;
   }
@@ -4435,6 +4509,10 @@ video {
     width: 100%;
   }
 
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .lg\:flex-row {
     flex-direction: row;
   }
@@ -4445,6 +4523,10 @@ video {
 
   .lg\:p-7 {
     padding: 1.75rem;
+  }
+
+  .lg\:p-5 {
+    padding: 1.25rem;
   }
 }
 
@@ -4473,6 +4555,10 @@ video {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
+  .xl\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .xl\:flex-row {
     flex-direction: row;
   }
@@ -4488,6 +4574,11 @@ video {
   .xl\:px-24 {
     padding-left: 6rem;
     padding-right: 6rem;
+  }
+
+  .xl\:px-36 {
+    padding-left: 9rem;
+    padding-right: 9rem;
   }
 
   .xl\:text-4xl {
